--- a/app/views/tacos/index.html.erb
+++ b/app/views/tacos/index.html.erb
@@ -6,7 +6,7 @@
     tacos = ["Carnitas", "Al Pastor", "Fish", "Carne Asada"]
 %>
 
-<p> There are <%= tacos.count %> tacos </p>
+<p> There are <%= tacos.count %> tacos: </p>
 
 
 <ul>
