--- a/app/views/cards/index.html.erb
+++ b/app/views/cards/index.html.erb
@@ -3,8 +3,8 @@
 
 <p>
 <% 
-    ranks = [2, 3, 4, 5, 6, 7, 8, 9, 10, "Jack", "Queen", "King", "Ace"]
-    suits = ["Clubs", "Diamonds", "Hearts", "Spades"]
+    ranks = [2, 3, 4, 5, 6, 7, 8, 9, 10, "jack", "queen", "king", "ace"]
+    suits = ["clubs", "diamonds", "hearts", "spades"]
 
     deck = []
     for rank in ranks
@@ -15,6 +15,7 @@
     end
 
     shuffled_deck = deck.shuffle
+    hand = shuffled_deck[0, 10]
 %>
 
 <%= shuffled_deck %>
@@ -23,8 +24,16 @@
 <p>
     <% for card in shuffled_deck %>
         <%= card %>
-    
     <% end %>
 </p>
+
+
+<p>
+    <% for card in hand %>
+    <% end %>
+</p>
+
+
+<p><a href="/cards">Deal Again!</a></p>
 
 
