--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -1,5 +1,19 @@
 <h1> Companies </h1>
 
+
+<% companies = Company.all %>
+
+<p> There are <%= Compnany.all.count%> companies: </p>
+
+<ul>
+    <% for company in companies %>
+    <li>
+    <%= company["name"] %>
+    </li>
+    <% end %>
+</ul>
+
+
 <ul>
     <li>Apple</li>
     <li>Amazon</li>
